fix: center align services title for improved presentation

--- a/style.css
+++ b/style.css
@@ -1182,6 +1182,7 @@ footer {
   .servicesTitle h1 {
     font-weight: 900;
     margin-left: -7px !important;
+    text-align: center;
   }
   .servicesSub {
     flex-direction: column;
